// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Темизация ThemeWrapper Если ThemeWrapper не верхний, список классов он навешивает на children 1`] = `
<div>
  <div
    class="themeWrapperChildren controls_themes__wrapper"
  >
    <div
      class="bottomThemeWrapperChildren controls_theme-default bottomActiveThemeClass controls_themes__wrapper"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Темизация ThemeWrapper Применяется статическая тема, указанная в активной 1`] = `
<div>
  <div
    class="themeWrapperChildren controls_themes__wrapper"
  >
    <div
      class="bottomThemeWrapperChildren controls_theme-default__test_min t-default__test controls_themes__wrapper"
    >
      test
    </div>
  </div>
</div>
`;
